log/build_2025-03-11_12-32-09/pid_control_node/stderr.log
  File "/home/batch9/ros2_ws/install/pid_control_node/lib/python3.12/site-packages/pid_control_node/pid_control.py", line 91
    speeds = ['''self.pid_controllers[i].compute(self.setpoints[i], self.encoder_values[i]) + '''self.encoder_values[i] for i in range(4)]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

